# graphql_server

./: Cargo.toml  README.md
src/: graphql_schema.rs  main.rs
