[package]
name = "http_graphql"
version = "0.1.0"
authors = ["Igor Braga <higorb1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
juniper_rocket = "0.6.3"
juniper_warp = "0.6.3"
warp = "0.2"
tokio = { version = "0.2", features = ["full"] }
juniper = { version = "0.15.4", features = ["expose-test-schema", "serde_json"] }
serde_json = "1.0.24"
serde = "1.0.75"